--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <head>
     
     <title>Royal Challengers Bengaluru</title>
-<link rel=
+<link rel="stylesheets"href="C:\Users\saiki\OneDrive\Desktop\index.css">
      
 </head>
 <body>
