--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     
     <title>Royal Challengers Bengaluru</title>
-<link rel="stylesheets" href="C:\Users\saiki\OneDrive\Desktop\index.css">
+<link rel="stylesheets" href="style.css">
      
 </head>
 <body>
